# mmc

./: Makefile.am  README.md  configure.ac
data/: Makefile.am  mmc.pc.in
mmc/: Makefile.am  iface.c  iface.h  incl.h  mmc.h  msg.c  msg.h  servant.c  servant.h  stub.h  utils.c  utils.h
